@@ -1,6 +1,7 @@
 # Offpunk History
 
 ## 1.0 - Unreleased
+- Content is now centered for more elegant reading
 - Fixed a crash when accessing links in list (thanks Matthieu Talbot for the report)
 - Fixed a crash due to a typo in a variable name rarely accessed.
 
